data/derived/comb/progs/unify/prog7341.ml.out
Characters 128-161:
  [mulByDigit i ([h2+(h mod 10)]@t2)];;
   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
